# roottest

root/roofitstats/: CMakeLists.txt
root/roofitstats/LHCb/: CMakeLists.txt  LHCb001_D0MassFit.py  LHCb002.cxx  LHCb002_JohnsonGaussModel.C  LHCb003_Hypatia.cxx  params.txt
root/roofitstats/LHCb/legacyPDFs/: RooIpatia2.cxx  RooIpatia2.h  RooIpatia2_anaInt.cxx  RooIpatia2_anaInt.h
root/roofitstats/vectorisedPDFs/: CMakeLists.txt  VectorisedPDFTests.cxx  testChiSquarePdf.cxx  testCompatMode.cxx  testHypatia2.cxx
